# smartparks-rhino-tracker-firmware

./: .README.md.swp  .gitignore  ACTIONS.md  README.md  decoder.js  encoder.js  encoder_rf_settings_json.py  encoder_settings_json.py  encoder_settings_json_1h_fix.py  encoder_settings_json_lion_default.py  index.html  manual_decoder.js  prebuild.py  release.py
.github/workflows/: build.yaml  relase.json  release.yaml
main/: board.h  command.cpp  command.h  gps_tracker.cpp  gps_tracker.h  lorawan.cpp  lorawan.h  main.ino  rf_testing.cpp  settings.cpp  settings.h  status.cpp  status.h
src/: Adafruit_ADS1015.cpp  Adafruit_ADS1015.h  LIS2DW12.cpp  board.h  command.cpp  command.h  gps_tracker.cpp  gps_tracker.h  lorawan.cpp  lorawan.h  main.ino  project_utils.cpp  project_utils.h  rf_testing.cpp  rf_testing.h  sensor.cpp  sensor.h  settings.cpp  settings.h  src.ino  status.cpp  status.h
src/test/: CMakeLists.txt  TestAll.cpp  charge_logic_test.c
src/test/arduino_mock/: CMakeLists.txt
tracker/: LIS2DW12.h  board.h  command.cpp  lorawan.cpp  settings.cpp  status.cpp  status.h  tracker.ino
tracker/test/: main_unittest.cpp
